[package]
name = "ucloud_push"
version = "0.1.0"
edition = "2021"
authors = [ "LiuliFox <liulifox@qq.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ["d1", "http"] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
anyhow = "1.0.97"
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["json", "time"] }
tracing = "0.1.41"
tracing-web = "0.1.3"
time = { version = "0.3.39", features = ["wasm-bindgen"] }
urlencoding = "2.1.3"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
htmd = "0.1.6"
